# movgr-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: app.py  cache.py  gtfs.py
src/data/bus/: lineas.csv  paradas.csv
src/data/gtfs/bus/: calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stops.txt  trips.txt
src/data/gtfs/metro/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  routes.txt  shapes.txt  stops.txt  trips.txt
src/data/metro/: paradas.csv
src/exceptions/: exceptions.py  handler.py
src/models/: base.py  bus.py  map.py  metro.py
src/routers/: bus.py  metro.py
src/services/: bus.py  metro.py  vcard.py
tests/: test_bus.py  test_core.py  test_metro.py
